src/components/cooking-calculator/CookingCalculator.css
.cook-container {
	position: relative;
	display: flex;
	flex-direction: row;
	justify-content: center;
	height: 85%;
}

.panel {
	width: 25%;
	height: 95%;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	border-radius: 10px;
	margin: 10px 10px 10px 10px;
	padding: 10px 10px 10px 10px;
	background-color: rgba(255, 255, 255, 0.15);
	box-sizing: border-box;
}

.panel-right {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.tabs {
	height: fit-content;
	width: 100%;
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: center;
	box-sizing: border-box;
}

.tab {
	height: 100%;
	width: 25%;
	display: flex;
	justify-content: center;
	align-items: center;
	border-radius: 5px;
	font-family: 'Brush Script MT', cursive;
	background-color: rgba(148, 148, 148, 0.5);
	margin: 5px 5px 5px 5px;
	transition: box-shadow 0.3s ease;
	cursor: pointer;
	box-sizing: border-box;
}
.tab:hover {
	-webkit-box-shadow: 0 0 5px 3px rgb(255, 255, 255);
	box-shadow: 0 0 5px 3px rgb(255, 255, 255);
}

.active {
	background-color: rgb(102 102 102);
	animation: glow 400ms cubic-bezier(0.65, 0.05, 0.36, 1) infinite alternate;
	border: 2px solid white;
}

@keyframes glow {
	0% {
		-webkit-box-shadow: 0 0 2px 1px rgb(255, 255, 255);
		box-shadow: 0 0 2px 1px rgb(255, 255, 255);
	}
	100% {
		-webkit-box-shadow: 0 0 4px 2px rgb(255, 255, 255);
		box-shadow: 0 0 4px 2px rgb(255, 255, 255);
	}
}

.dish-container {
	height: 80%;
	width: 100%;
	box-sizing: border-box;
	margin: 5px 10px 5px 10px;
	border-radius: 5px;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: row;
	flex-wrap: wrap;
	overflow-y: auto;
	padding: 5px 5px 5px 5px;
}

.dish-wrapper {
	display: flex;
	flex-direction: row;
	justify-content: left;
	align-items: center;
	flex-wrap: wrap;
	width: 90%;
	margin: auto;
}

.dish-tile {
	width: 6vw;
	height: 100px;
	margin: 5px;
	display: flex;
	justify-content: center;
	flex-direction: column;
	text-align: center;
	cursor: pointer;
	transition: transform 200ms linear;
	max-width: 200px;
	background-position: center;
	background-repeat: no-repeat;
	background-size: 100% 100%;
	padding: 23px;
	color: whitesmoke;
}
.dish-tile:hover {
	transform: scale(1.1);
}

.dish-title {
	font-size: 10px;
	border-radius: 10px 10px 0px 0px;
	overflow: hidden;
	text-overflow: ellipsis;
	display: -webkit-box;
	-webkit-box-orient: vertical;
	-webkit-line-clamp: 2;
	padding-bottom: 5px;
}

.dish-effect {
	height: 60%;
	font-size: 9px;
	overflow-y: auto;
	border-top: dashed 1px #9b7d67;
	border-bottom: dashed 1px #9b7d67;
	padding-top: 3px;
}

.dish-stars {
	height: fit-content;
	color: #fecd00;
	font-size: 14px;
	display: flex;
	padding: 2px 0 2px 0;
	justify-content: center;
	align-items: center;
}

.three-star-scroll {
	background-image: url(../../../public/imgs/scroll-3star.png) !important;
}
.four-star-scroll {
	background-image: url(../../../public/imgs/scroll-4star.png) !important;
}
.five-star-scroll {
	background-image: url(../../../public/imgs/scroll-5star.png) !important;
}

.three-star {
	background: rgb(59, 95, 130);
	background: linear-gradient(
		180deg,
		rgba(59, 95, 130, 0.75) 0%,
		rgba(88, 131, 173, 0.75) 100%
	);
}
.four-star {
	background: rgb(102, 74, 110);
	background: linear-gradient(
		180deg,
		rgba(102, 74, 110, 0.75) 0%,
		rgba(140, 104, 150, 0.75) 100%
	);
}
.five-star {
	background: rgb(149, 102, 31);
	background: linear-gradient(
		180deg,
		rgba(149, 102, 31, 0.75) 0%,
		rgba(245, 168, 53, 0.75) 100%
	);
}

::-webkit-scrollbar {
	width: 15px;
}

::-webkit-scrollbar-track {
	background-color: transparent;
}

::-webkit-scrollbar-thumb {
	background-color: #292929;
	border-radius: 15px;
	height: 100px;
	border: 5px solid transparent;
	background-clip: content-box;
}

::-webkit-scrollbar-thumb:hover {
	background-color: rgba(63, 63, 63, 0.5);
}

.mealprep-container {
	overflow-y: auto;
	overflow-x: hidden;
}

.meal-row {
	background-color: rgba(131, 131, 131, 0.5);
	border-radius: 10px;
	padding: 10px;
	margin: 5px;
	/* font-size: 12px; */
	font-weight: 900 !important;
	color: rgb(228, 228, 228);
	box-shadow: -1px 1px 3px 0 rgba(0, 0, 0, 0.5);
	max-width: 300px;
}

.meal-ingredients {
	padding-left: 20px;
	width: 100%;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: left;
	align-items: center;
}

.meal-ingredient {
	width: 50px;
	height: 50px;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	background-color: rgba(0, 0, 0, 0.5);
	border-radius: 5px;
	margin: 5px;
	cursor: pointer;
	transition: transform 200ms linear;
	box-shadow: -1px 1px 3px 0 rgba(0, 0, 0, 0.5);
}
.meal-ingredient:hover {
	transform: scale(1.1);
	/* border: 2px solid white; */
}
.ingredient-icon {
	height: 80%;
	width: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
}

.ingredient-name {
	display: inline-flex;
	text-transform: capitalize;
	height: fit-content;
	font-size: 8px;
	padding-bottom: 2px;
	text-align: center;
}
.ingredient-qty {
	display: inline-flex;
	float: right;
}

.meal-header {
}

.meal-name {
	display: inline;
}

.meal-qty {
	display: flex;
	float: right;
	align-items: center;
	cursor: default;
}

.meal-count {
	padding: 0 2px 0 2px;
}
.meal-icon {
	cursor: pointer;
	font-size: 20px;
	border-radius: 100%;
	transition: background-color 0.3s linear;
}
.meal-icon.plus {
	color: #ff6962;
}
.meal-icon.minus {
	color: #5fa777;
}
.meal-icon:hover {
	background-color: rgba(204, 204, 204, 0.5);
}

